Edited wiki page Binaries through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1410 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -20,7 +20,7 @@ Installation:
     * [http://openmalaria.googlecode.com/svn/download/openmalariaTools/openmalariaTools-V00.03/win32/openMalariaTools_installer_v00.03.exe Windows (32-bit) openmalariaTools installer]
     * Linux package will follow.
 
-For further informations please have a look at [UseOpenMalariaTools Install and Use openmalariaTools]
+For further informations please have a look at [openmalariaTools Install and Use openmalariaTools]
 
 == Binaries only ==
 
