--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -25,8 +25,8 @@ All options not otherwise specified are point-time outputs.
 || N_v || The number of mosquitoes ||
 || O_v || The number of infected mosquitoes ||
 || S_v || The number of infectious mosquitoes ||
-|| input EIR || Total entomological infection rate input. This is a fixed periodic value, for comparison with simulated EIR. Units: innoculations per person per timestep. ||
-|| simulated EIR || EIR actually acting on humans, as calculated by the transmission model. Units: innoculations per person per timestep. ||
+|| input EIR || Total entomological infection rate input. This is a fixed periodic value, for comparison with simulated EIR. Units (from schema version 24): inoculations per adult per timestep. ||
+|| simulated EIR || EIR actually acting on humans, as calculated by the transmission model. Units: inoculations per person per timestep. ||
 || human infectiousness || Infectiousness of humans to mosquitoes, also known as kappa. This is the probability of a mosquito biting a human from becoming infected. ||
 || human availability || Mean availability of humans to mosquitoes over human population. ||
 || immunity h || Average of `_cumulativeh` parameter across humans, which is the cumulative number of infections recieved since birth ||
@@ -86,8 +86,8 @@ The Nv0, Nv, Ov and Sv outputs are per-species; the EIR outputs are single value
 || 32 || Vector_Nv  || n ||  Mosquito population size ||
 || 33 || Vector_Ov  || n ||  Number of infected mosquitoes ||
 || 34 || Vector_Sv  || n ||  Number of infectious mosquitoes ||
-|| 35 || Vector_EIR_Input  || n ||  Input EIR (Expected EIR entered into scenario file). Units: innoculations per person per timestep. ||
-|| 36 || Vector_EIR_Simulated  || n ||  Simulated EIR (EIR output by the vector model). Units: innoculations per person per timestep. ||
+|| 35 || Vector_EIR_Input  || n ||  Input EIR (Expected EIR entered into scenario file). Units (from schema version 24): inoculations per adult per timestep. ||
+|| 36 || Vector_EIR_Simulated  || n ||  Simulated EIR (EIR output by the vector model). Units: inoculations per person per timestep. ||
 || 37 || || || (removed) ||
 || 38 || || || (removed) ||
 || 39 || Clinical_RDTs  || n ||  Number of Rapid Diagnostic Tests used ||
