Edited wiki page Code through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1439 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Code.wiki
+++ b/wiki/Code.wiki
@@ -2,7 +2,7 @@
 
 = Source code =
 
-Code is primarily versioned by the svn repository here ("Source" tab). To contribute patches, please open an issue or use the [http://groups.google.com/group/openmalaria mailing list].
+Code is primarily versioned by the svn repository here ([http://code.google.com/p/openmalaria/source/checkout "Source" tab]). To contribute patches, please open an issue or use the [http://groups.google.com/group/openmalaria mailing list].
 
 There is also a git repository, which _used to_ follow the svn repository. However, due to occaisonal git-svn interaction bugs cropping up and preventing further synchronisation of the git and svn repositories, it's been abandoned. It does, however, still contain some history detail in side branches which got compressed to a single commit in the svn repository. You can find it [http://github.com/dhardy/openmalaria here].
 
