--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,51 +1,38 @@
 #summary Content of wiki
 
-[Start Introduction]
+===contents===
 
-===Simulating===
-
-[SetupOverview Getting started (local simulations)]
-  * [Binaries Pre-compiled binaries]
-  * [UtilsWindows Useful utilities on Windows]
-
-Scenario design
-
-  * [XmlEntoVector Vector-transmission parameters]
-
-[OutputFormats Results]
-
-  * [OutputFiles File formats]
-
-Tools
-     * [XmlUpdateScenario Updating schema version]
-     * LiveGraph
-
-References
-
-  * [XmlScenario Scenario XML]
-  * [XmlMonitoring Monitoring measures]
-  * [Terminology]
-
-===Model descriptions===
-
-[ModelsOverview Components]
-  * [ModelDemography Human demography]
-  * [ModelTransmission Transmission models]
-  * [ModelWithinHost Within-host models]
-  * [ModelPathogenesis Morbidity (pathogenesis) models]
-  * [ModelClinical Clinical (sickness) models]
-  * [ModelDrug Drug (PKPD) action & resistance models]
-  * [ModelNeonatal Neonatal mortality]
-
-Interventions
-  * [ModelInterventions Intervention deployment and descriptions]
-
-===Code development===
-
-[Code#Source_code Source code]
-  * [Code#Doxygen_documentation doxygen-generated documentation]
-
-[BuildSystem Building and Testing]
-  * [WindowsBuildOpenMalaria Windows]
-  * [UnixBuildOpenMalaria Unix]
-  * [MacBuildOpenMalaria Mac]
+  * [Start Introduction]
+  * *Simulations*
+    * [SetupOverview Getting started (local simulations)]
+      * [Binaries Pre-compiled binaries]
+      * [UtilsWindows Useful utilities on Windows]
+    * Scenario design
+      * [XmlEntoVector Vector-transmission parameters]
+    * [OutputFormats Results]
+      * [OutputFiles File formats]
+    * Tools
+      * [XmlUpdateScenario Updating schema version]
+      * LiveGraph
+    * References
+      * [XmlScenario Scenario XML]
+      * [XmlMonitoring Monitoring measures]
+      * [Terminology]
+  * *Model descriptions*
+    * [ModelsOverview Components]
+      * [ModelDemography Human demography]
+      * [ModelTransmission Transmission models]
+      * [ModelWithinHost Within-host models]
+      * [ModelPathogenesis Morbidity (pathogenesis) models]
+      * [ModelClinical Clinical (sickness) models]
+      * [ModelDrug Drug (PKPD) action & resistance models]
+      * [ModelNeonatal Neonatal mortality]
+    * Interventions
+      * [ModelInterventions Intervention deployment and descriptions]
+  * *Code development*
+    * [Code#Source_code Source code]
+      * [Code#Doxygen_documentation doxygen-generated documentation]
+    * [BuildSystem Building and Testing]
+      * [WindowsBuildOpenMalaria Windows]
+      * [UnixBuildOpenMalaria Unix]
+      * [MacBuildOpenMalaria Mac]
