Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1445 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -2,7 +2,7 @@
 
 ===contents===
 
-  * [Start Introduction]
+  * *[Start Introduction]*
   * *[OMUsage Simulations]*
     * [SetupOverview Getting started (local simulations)]
       * [Binaries Pre-compiled binaries]
@@ -34,5 +34,5 @@
       * [Code#Doxygen_documentation doxygen-generated documentation]
     * [BuildSystem Building and Testing]
       * [WindowsBuildOpenMalaria Windows]
-      * [UnixBuildOpenMalaria Unix]
+      * [UnixBuildOpenMalaria Linux]
       * [MacBuildOpenMalaria Mac]
