Edited wiki page BuildSystem through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1446 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/BuildSystem.wiki
+++ b/wiki/BuildSystem.wiki
@@ -1,7 +1,7 @@
 #summary Building and Testing OpenMalaria
 
 == Building OpenMalaria ==
- * [UnixBuildOpenMalaria On Unix]
+ * [UnixBuildOpenMalaria On Linux] / Unix in general
  * [WindowsBuildOpenMalaria On Windows]
  * [MacBuildOpenMalaria On Mac] (addition to unix instructions)
 
