Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1453 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -7,7 +7,7 @@
     * [SetupOverview Getting started (local simulations)]
       * [Binaries Pre-compiled binaries]
       * [UtilsWindows Useful utilities on Windows]
-    * Scenario design
+    * [ScenarioDesign Scenario design]
       * [XmlEntoVector Vector-transmission parameters]
     * [OutputFormats Results]
       * [OutputFiles File formats]
