--- a/wiki/ScenarioDesign.wiki
+++ b/wiki/ScenarioDesign.wiki
@@ -4,11 +4,15 @@
 
 OpenMalaria is designed to run small-medium scale independent simulations. If you want to design an experiment evaluating the impact of one of more factors, you may want to read about [ExperimentDesign designing experiments].
 
+The following is intended as an easy to read and use guide to creating scenarios. For a curter reference guide, see [XmlScenario].
+
 Within a simulation of a single setting, dubbed a _scenario_, there are a number of choices to make, outlined below. These choices are entered as XML elements. Removing much of the detail, such an XML file looks like this:
 
 {{{
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<scenario xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" analysisNo="0" assimMode="0" name="template scenario" schemaVersion="23" wuID="0" xsi:noNamespaceSchemaLocation="scenario_23.xsd">
+<scenario xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" analysisNo="0"
+    assimMode="0" name="template scenario" schemaVersion="23" wuID="0"
+    xsi:noNamespaceSchemaLocation="scenario_23.xsd">
   <demography ...>
     ...
   </demography>
