Edited wiki page ModelIntervMisc through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1462 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelIntervMisc.wiki
+++ b/wiki/ModelIntervMisc.wiki
@@ -5,9 +5,9 @@
 The following table lists interventions which have been implemented in OpenMalaria, and which deployment methods are available:
 
 || intervention || mass-deployment || continuous-deployment ||
-|| [ModelIntervMist#Import_Infections `ImportedInfectionsPerThousandHosts` || yes || no ||
-|| [ModelIntervMist#Insert_R_0_case `InsertR_0Case` || yes || no ||
-|| [ModelIntervMist#Immune_suppression `immuneSuppression` || yes || no ||
+|| [ModelIntervMist#Import_Infections `ImportedInfectionsPerThousandHosts`] || yes || no ||
+|| [ModelIntervMist#Insert_R_0_case `InsertR_0Case`] || yes || no ||
+|| [ModelIntervMist#Immune_suppression `immuneSuppression`] || yes || no ||
 
 == Import Infections ==
 
