--- a/wiki/ModelIntervHuman.wiki
+++ b/wiki/ModelIntervHuman.wiki
@@ -23,13 +23,19 @@ Three vaccine types are simulated; this intervention administers all of these wh
  * Blood-stage vaccine (vaccineType 2): acts as a killing factor on blood-stage parasites
  * Transmission-blocking vaccine (vaccineType 3): one minus this scales the probability of transmission to mosquitoes
 
+Use standard [ModelInterventions#Continuous_descriptions continuous] and [ModelInterventions#Timed_descriptions timed] descriptions.
+
 == Mass Drug Administration ==
 
 MDA simply gives humans drugs. In the 5-day timestep models, these drugs are simply modelled (drug kills 100% of parasites in all patients receiving it with no lasting effect), while with the 1-day time-step model a drug dosage must be specified.
 <placeholder>
+
+Uses standard [ModelInterventions#Timed_descriptions timed] descriptions.
 
 == Intermittent Preventive Treatment ==
 
 IPTi and IPTc: Intermittent Preventative Treatment for infants/children. Somewhat similar to mass drug administration, but allows drugs to have a lasting (prophylactic) effect using the 5-day time-step model.
 
 There is currently no equivalent for 1-day time-step models, since the PKPD model used for mass-drug administration already allows prophylactic effects.
+
+Uses standard [ModelInterventions#Continuous_descriptions continuous] and [ModelInterventions#Timed_descriptions timed] descriptions.
