Edited wiki page ScenarioDesign through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1475 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ScenarioDesign.wiki
+++ b/wiki/ScenarioDesign.wiki
@@ -110,8 +110,8 @@ The only aspect of this we commonly change is the population size. Population si
 
 == Interventions ==
 
-For now, see [ModelInterventions this page].
+See [ModelInterventions this page].
 
 == Monitoring ==
 
-When designing a scenario, you will need to think about what kind of output is required. See [OutputFiles] and the [XmlMonitoring list of available measures].
+When designing a scenario, you will need to think about what kind of output is required. See [Monitoring] and the [XmlMonitoring list of available measures].
